🔗 Update API URL to live Render backend

--- a/chat.html
+++ b/chat.html
@@ -249,7 +249,7 @@
             typingIndicator.classList.remove("hidden");
       
             try {
-              const response = await fetch("http://127.0.0.1:5000/api/chat", {
+              const response = await fetch("https://krishibot-ai.onrender.com/api/chat", {
                 method: "POST",
                 headers: {
                   "Content-Type": "application/json",
