🖼️ Fix image path in hero section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -104,7 +104,7 @@
         <div class="absolute -bottom-10 -right-10 w-64 h-64 bg-primary-200 rounded-full mix-blend-multiply filter blur-xl opacity-70 animate-blob animation-delay-2000"></div>
         <div class="relative">
           <!-- <img src="https://images.unsplash.com/photo-1586771107445-d3ca888129ce?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="Happy farmer with tablet" class="rounded-2xl shadow-2xl border-8 border-white transform rotate-2 animation-float"> -->
-          <img src="/frontend/krishi2.jpg" alt="Happy farmer with tablet" class="rounded-2xl shadow-2xl border-8 border-white transform rotate-2 animation-float">
+          <img src="/frontend/assets/krishi2.jpg" alt="Happy farmer with tablet" class="rounded-2xl shadow-2xl border-8 border-white transform rotate-2 animation-float">
         </div>
       </div>
     </div>
