--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1319,5 +1319,7 @@
         }
       });
     </script>
+    <script src="./chatbot.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
