--- a/frontend/index.html
+++ b/frontend/index.html
@@ -221,7 +221,7 @@
           ></div>
           <div class="relative">
             <img
-              src="https://images.unsplash.com/photo-1586771107445-d3ca888129ce?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80"
+              src="./assets/krishi2.jpg"
               alt="Happy farmer with tablet"
               class="rounded-2xl shadow-2xl border-8 border-white transform rotate-2 animation-float"
             />
